<resources>
    <string name="app_name">亿游天下</string>
    <string name="tab1">首页</string>
    <string name="tab2">特产</string>
    <string name="tab3">发现</string>
    <string name="tab4">我的</string>


    <!--首页-->

    <string name="home_title">首页</string>
    <string name="home_cash_coupon">购折扣门票</string>
    <string name="home_scenic_spot">游全国景区</string>
    <string name="home_tourist_goods">找旅游用品</string>
    <string name="home_eat">我要吃</string>
    <string name="home_live">我要住</string>
    <string name="home_play">我要玩</string>
    <string name="home_travel_agency">旅行社</string>

    <!--登录-->
    <string name="login_title">登录</string>
    <string name="login_phone">手机号</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_code">验证码</string>
    <string name="login_cb_tips">同意《亿游天下用户协议》</string>
    <string name="login_success">登录成功</string>
    <string name="login_approve">请同意协议</string>

    <!-- TODO: 我的 -->
    <string name="me_title">我的</string>
    <string name="me_exchange">充值代金券</string>
    <string name="me_xufei">续费升级</string>
    <string name="me_buy">年卡购买</string>
    <string name="me_bind_card">绑定年卡</string>
    <string name="me_passport_num">年卡号:</string>
    <string name="me_passport_type">等级:</string>
    <string name="me_addvance_recored">预约记录</string>
    <string name="me_recommend_friends">推荐好友</string>
    <string name="me_qrcode">我的二维码</string>
    <string name="me_order">我的订单</string>
    <string name="me_about_me">关于我们</string>
    <string name="me_opinion">意见反馈</string>
    <string name="me_hand_opinion">提交</string>
    <string name="me_hand_opinion_tips">请填写意见内容</string>
    <string name="me_exit">退出</string>
    <string name="me_kf_phone">全国统一客服:400-881-0662</string>
    <string name="me_company">北京亿游天下旅游发展有限公司</string>
    <!--TODO: 景区列表-->
    <string name="scenic_list_title">全国景区</string>
    <!--TODO:景区详情-->
    <string name="btn_ticket_buy">门票购买</string>
    <string name="btn_advance">立即预约</string>
    <string name="scenic_tab1">游玩须知</string>
    <string name="scenic_tab2">图文详情</string>
    <string name="scenic_tab3">附近推荐</string>
    <string name="scenic_open">开放时间</string>
    <string name="scenic_yhzc">优惠政策</string>
    <string name="scenic_traffic">交通信息</string>
    <string name="scenic_note">注意事项</string>
    <string name="scenic_addvance_end_date">最晚预约至:%s</string>
    <string name="scenic_hand_passport">持卡享优惠</string>
    <string name="scenic_addvance">需预约</string>

    <string name="sel_city_title">地区选择</string>

    <!--TODO：特产-->
    <string name="specialty_title">特产</string>
    <string name="specialty_search">搜索</string>

    <!--TODO: 发现-->
    <string name="find_title">发现</string>
    <string name="find_scenic_sort">景区游玩排行榜</string>
    <string name="find_info">景区资讯</string>
    <string name="find_info_details">资讯详情</string>
    <!--TODO：商家部分-->
    <string name="business_add">加盟</string>
    <string name="business_add_title">商家加盟</string>
    <string name="business_add_cancel_upload">取消上传</string>
    <string name="business_name">店铺名字</string>
    <string name="business_name_hint">请输入店铺名字</string>
    <string name="business_discount">亿游优惠</string>
    <string name="business_discount_hint">请输入折扣信息</string>
    <string name="business_phone">联系电话</string>
    <string name="business_join_type">加盟类型</string>
    <string name="business_phone_hint">请输入订餐电话</string>
    <string name="business_address">店面地址</string>
    <string name="business_address_hint">请输入店面地址</string>
    <string name="business_feature">特色</string>
    <string name="business_feature_hint">请填写店铺特色</string>
    <string name="business_banner">上传门头照片</string>
    <string name="business_approve">上传审核</string>

    <!--TODO:搜索poi-->
    <string name="poi_hint">请输入地址</string>

    <!--TODO: loadHtml-->
    <string name="xnlv">虚拟旅游</string>
    <string name="buy_ticket">购买门票</string>
    <string name="advance">预约</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
